--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-opencv-python==4.8.1.78
+opencv-contrib-python-headless==4.8.1.78
+opencv-python-headless==4.8.1.78
 numpy==1.20.3
 streamlit==1.12.0
 future==0.18.2
